--- a/src/shared-ui/src/locales/es.json
+++ b/src/shared-ui/src/locales/es.json
@@ -202,6 +202,9 @@
     "idleWarning": "Has estado inactivo durante 30 minutos y tu sesión ha expirado. Por razones de seguridad, deberás autenticarte nuevamente.",
     "sessionExpired": "Sesión expirada"
   },
+  "meta": {
+    "check_signer_logs": "Consulte el registro (log) del firmante para más detalles."
+  },
   "noData": {
     "loading": "Cargando ... por favor espera",
     "noBackups": "No hay copias de seguridad todavía",
