--- a/src/shared-ui/src/locales/es.json
+++ b/src/shared-ui/src/locales/es.json
@@ -1,21 +1,18 @@
 {
-  "locals_demo": "Esto se localiza en la biblioteca",
-  "type": "Tipo",
-  "warning": "Advertencia",
   "action": {
     "activate": "Activar",
-    "cancel": "Cancelar",
     "add": "Agregar",
     "addClient": "Agregar cliente",
     "addMember": "Agregar miembro",
     "addSubsystem": "Agregar subsistema",
+    "cancel": "Cancelar",
     "close": "Cerrar",
     "confirm": "Confirmar",
     "continue": "Continuar",
     "copy": "Copiar",
     "copyId": "Copiar identificación",
-    "delete": "Borrar",
     "deactivate": "Desactivar",
+    "delete": "Borrar",
     "done": "Hecho",
     "download": "Descargar",
     "edit": "Editar",
@@ -66,13 +63,13 @@
       "success": "Clave API creada con éxito",
       "title": "Crear clave API"
     },
+    "edit": {
+      "roleRemoveOnly": "(solo eliminar)"
+    },
     "role": {
       "XROAD_REGISTRATION_OFFICER": "Oficial de registro",
       "XROAD_SECURITY_OFFICER": "Oficial de seguridad",
       "XROAD_SYSTEM_ADMINISTRATOR": "Administrador del Sistema"
-    },
-    "edit": {
-      "roleRemoveOnly": "(solo eliminar)"
     },
     "table": {
       "action": {
@@ -99,10 +96,14 @@
       }
     }
   },
-  "keys": {
-    "gotIt": "Entiendo"
-  },
   "backup": {
+    "createBackup": {
+      "button": "Refiguración de copia de seguridad.",
+      "messages": {
+        "localConfWarning": "¡Advertencia! El archivo o fichero \"/etc/xroad/services/local.conf\" utilizado para las anulaciones de configuración está en desuso y ya no se incluye en las copias de seguridad. El archivo \"/etc/xroad/services/local.properties\" debe usarse en su lugar.",
+        "success": "Copia de seguridad {archivo} creada correctamente"
+      }
+    },
     "deleteBackup": {
       "dialog": {
         "confirmation": "¿Estás seguro de que quieres eliminar la copia de seguridad {archivo}?",
@@ -117,13 +118,6 @@
       },
       "success": "Configuración restaurada desde {archivo}"
     },
-    "createBackup": {
-      "button": "Refiguración de copia de seguridad.",
-      "messages": {
-        "success": "Copia de seguridad {archivo} creada correctamente",
-        "localConfWarning": "¡Advertencia! El archivo o fichero \"/etc/xroad/services/local.conf\" utilizado para las anulaciones de configuración está en desuso y ya no se incluye en las copias de seguridad. El archivo \"/etc/xroad/services/local.properties\" debe usarse en su lugar."
-      }
-    },
     "uploadBackup": {
       "button": "Subir copia de seguridad",
       "confirmationDialog": {
@@ -135,6 +129,8 @@
   },
   "cert": {
     "certificate": "Certificado",
+    "ecParameters": "Parámetros de clave pública de la EC",
+    "ecPoint": "Punto de clave pública de la EC",
     "hashInfo": "Hash (SHA-256)",
     "keyUsage": {
       "CRL_SIGN": "Firma CRL",
@@ -148,9 +144,7 @@
       "NON_REPUDIATION": "No repudio"
     },
     "rsaExp": "Exponente de clave pública de RSA",
-    "rsaModulus": "Módulo de clave pública RSA",
-    "ecParameters": "Parámetros de clave pública de la EC",
-    "ecPoint": "Punto de clave pública de la EC"
+    "rsaModulus": "Módulo de clave pública RSA"
   },
   "error_code": {
     "api_key_not_found": "Clave de API no encontrada",
@@ -168,13 +162,13 @@
     "validation_failure": "Falla de validación"
   },
   "fields": {
-    "password": "Contraseña",
-    "username": "LIB-Username",
-    "shared": "sharedlib",
     "code": "Código",
     "description": "Descripción",
     "memberClass": "Clase del miembro",
-    "securityServerCode": "Código de servidor de seguridad"
+    "password": "Contraseña",
+    "securityServerCode": "Código de servidor de seguridad",
+    "shared": "sharedlib",
+    "username": "LIB-Username"
   },
   "footer": {
     "copyright": {
@@ -192,6 +186,10 @@
     "all": "Todo",
     "name": "Nombre"
   },
+  "keys": {
+    "gotIt": "Entiendo"
+  },
+  "locals_demo": "Esto se localiza en la biblioteca",
   "login": {
     "errorMsg401": "Nombre de usuario o contraseña incorrectos",
     "generalError": "Error de inicio de sesion. Por favor intente de nuevo.",
@@ -214,6 +212,12 @@
     "noMatches": "Sin coincidencias con los criterios",
     "noServices": "Sin servicios",
     "noTokens": "Sin Tokens"
+  },
+  "type": "Tipo",
+  "validation": {
+    "messages": {
+      "address": "El campo {campo} contiene caracteres no válidos"
+    }
   },
   "validationError": {
     "AssertFalse": "el valor debe ser 'falso'",
@@ -247,9 +251,5 @@
     "ValidHostAddress": "Se requiere un nombre de dominio completamente calificado (FQDN) válido (por ejemplo, host.example.org) o una dirección IP pública (por ejemplo, 192.168.123.123).",
     "ValidHostAddressField": "Se requiere una dirección IP válida o un nombre de dominio completamente calificado (FQDN)."
   },
-  "validation": {
-    "messages": {
-      "address": "El campo {campo} contiene caracteres no válidos"
-    }
-  }
+  "warning": "Advertencia"
 }
