feat(SS): download system info
local.ini overrides/in sidecar/whats running

Refs: XRDDEV-2724

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -180,6 +180,7 @@
     "addOnStatus": {
       "messageLogDisabled": "Disabled by configuration"
     },
+    "downloadReport": "Download Diagnostic Report",
     "encryption": {
       "backup": {
         "configuredKeyId": "Configured Key Id",
