--- a/src/packages/src/xroad/ubuntu/generic/changelog
+++ b/src/packages/src/xroad/ubuntu/generic/changelog
@@ -1,3 +1,10 @@
+xroad (7.7.0-0) stable; urgency=medium
+
+  * Change history is found at /usr/share/doc/xroad-
+    common/CHANGELOG.md.gz
+
+ -- NIIS <info@niis.org>  Fri, 03 Jan 2025 08:36:21 +0000
+
 xroad (7.6.0-1) stable; urgency=medium
 
   * Change history is found at /usr/share/doc/xroad-
