feat: As a Security Server Administrator I would like to see the status of the automatic authentication registration email notification on the diagnostics page
refs: XRDDEV-2795

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -225,6 +225,7 @@
       "vendor": "Vendor name"
     },
     "mailNotificationConfiguration": {
+      "authCertRegisteredEnabled": "AUTH certificate registered notifications",
       "confStatus": {
         "false": "Configuration incomplete",
         "true": "Configured"
