--- a/src/packages/src/xroad/ubuntu/generic/changelog
+++ b/src/packages/src/xroad/ubuntu/generic/changelog
@@ -1,3 +1,10 @@
+xroad (7.6.1-1) stable; urgency=medium
+
+  * Change history is found at /usr/share/doc/xroad-
+    common/CHANGELOG.md.gz
+
+ -- NIIS <info@niis.org>  Mon, 27 Jan 2025 16:10:10 +0200
+
 xroad (7.6.0-1) stable; urgency=medium
 
   * Change history is found at /usr/share/doc/xroad-
