feat(cs): names for subsystems
UI and global conf

Refs: XRDDEV-2762

--- a/src/central-server/admin-service/ui/src/locales/en.json
+++ b/src/central-server/admin-service/ui/src/locales/en.json
@@ -9,6 +9,7 @@
     "approve": "Approve",
     "decline": "Decline",
     "generateCsr": "Generate CSR",
+    "rename": "Rename",
     "select": "Select"
   },
   "apiKey": {
@@ -434,13 +435,16 @@
         "areYouSureDelete": "Are you sure you want to delete the Subsystem {subsystemCode} from the X-Road member {memberId} from the system configuration?",
         "areYouSureUnregister": "Are you sure you want to delete the Subsystem {subsystemCode} from server {serverCode} from the system configuration?",
         "deleteSubsystem": "Delete Subsystem",
+        "renameSubsystem": "Rename Subsystem",
         "serverOwner": "Server owner",
         "servercode": "Server code",
         "status": "Status",
         "subsystemSuccessfullyAdded": "Subsystem {subsystemCode} is added to the system configuration",
         "subsystemSuccessfullyDeleted": "Subsystem {subsystemCode} has been deleted from the system configuration",
         "subsystemSuccessfullyUnregistered": "Subsystem {subsystemCode} from server {serverCode} has been deleted",
-        "subsystemcode": "Subsystem code"
+        "subsystemSuccessfullyRenamed": "Subsystem name successfully saved",
+        "subsystemcode": "Subsystem code",
+        "subsystemname": "Subsystem name"
       }
     },
     "memberSuccessfullyAdded": "Member {memberName} is added to the system configuration."
