feat: As an X-Road Security Server Administrator I want the authentication and signing certificates to be activated automatically when ACME is used so that I don't need to do it manually
refs: XRDDEV-2735

--- a/src/security-server/admin-service/ui/src/locales/en.json
+++ b/src/security-server/admin-service/ui/src/locales/en.json
@@ -596,6 +596,7 @@
     "id": "ID",
     "importCert": "Import cert.",
     "importCertSuccess": "Uploading certificate succeeded",
+    "importCertOcspVerifyWarning": "Could not activate certificate, because OCSP Responses could not be verified. Error message: {errorMessage}",
     "incorrectPin": "Incorrect PIN. Please try again.",
     "keyAlgorithm": "Key Algorithm:",
     "keyDeleted": "Key deleted",
